Fixed card background to blend on iOS

--- a/src/components/OrderNow.css
+++ b/src/components/OrderNow.css
@@ -36,9 +36,9 @@ Card
 	width: 100%;
 	height: 100%;
 	text-align: left;
-	background: url("../images/Food.jpg") rgba(255, 255, 255, 0.8);
+	background: linear-gradient(0, rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8)), url("../images/Food.jpg");
 	background-size: cover;
-	background-blend-mode: soft-light;
+	/* background-blend-mode: soft-light; */
 }
 
 .card:hover {
